# citry

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  pyproject.toml  rust-toolchain.toml
.claude/hooks/: check-em-dashes.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: py--citry--publish.yml  py--citry-core--publish.yml  py--tests-cross-browser.yml  py--tests.yml  repo--check.yml  repo--discord-discussion.yml  repo--discord-issue.yml  repo--discord-pr.yml  repo--discord-release.yml  repo--docs-check.yml  repo--docs-deploy.yml  repo--supported-versions.yml  repo--tests.yml  rust--tests.yml
benchmarks/: README.md  compare.py  plot.py  utils.py
crates/citry_core_py/: Cargo.toml  README.md
crates/citry_core_py/src/: html_transform.rs  lib.rs  safe_eval.rs  template_parser.rs
crates/citry_html_transform/: AGENTS.md  README.md
crates/citry_html_transform/src/: lib.rs  marker.rs  transformer.rs
crates/citry_html_transform/tests/: marker.rs
crates/citry_template_parser/: README.md
crates/citry_template_parser/docs/agent/: INDEX.md
crates/citry_template_parser/src/: ast.rs  compiler.rs  constants.rs  lib.rs  parser.rs  parser_context.rs
crates/citry_template_parser/src/lang/: python.rs
crates/citry_template_parser/tests/: tag_compiler.rs  tag_parser_control_flow_for.rs  tag_parser_control_flow_if.rs  tag_parser_dynamic_attrs.rs  tag_parser_fills.rs  tag_parser_user_rules.rs
crates/citry_template_parser/tests/common/: mod.rs
crates/python_safe_eval/: Cargo.toml  README.md
crates/python_safe_eval/src/: codegen.rs  comments.rs  lib.rs  transformer.rs
crates/python_safe_eval/src/utils/: python_ast.rs
crates/python_safe_eval/tests/: codegen.rs  comments.rs  transformer.rs
docs/: codebase.md  template-syntax.md
docs/agent/: INDEX.md  RATIONALE.md
docs/design/: asset_loading.md  benchmarking.md  citry_migration.md  citry_migration_tests.md  constness.md  deferred_rendering.md  dependencies.md  dynamic_component.md  extensions.md  hot_reload.md  html_attrs.md  provide.md  rendering.md  slots.md
docs_site/: __init__.py  __main__.py  build.py  cli.py  config.py  directives.py  examples.py  fence_protection.py  frontmatter.py  nav.py  paths.py  pipeline.py  serve.py
docs_site/components/: __init__.py  doc_page.py
docs_site/tests/: test_build.py  test_chrome.py  test_directives.py  test_examples.py  test_nav.py  test_pipeline.py  test_serve.py
scripts/: check.py  validate.py
scripts/precommit/: python_core_bindings_check.py  python_package_dependabot.py  rust_crate_member.py  rust_toolchain_check.py
scripts/validators/: bindings.py  crate_member.py  dependabot.py  toolchain.py
