# Root pyproject: monorepo-wide tooling config only (not a releasable package).

[project]
name = "citry-monorepo"
version = "0.0.0"
description = "Monorepo tooling configuration"
requires-python = ">=3.10,<4.0"
dependencies = []
classifiers = [
    "Private :: Do Not Upload", # Explicitly mark as non-releasable
]

# dev/ci and benchmark mirror packages/py/citry's test and benchmark deps (CI
# and the shared venv install from here); keep in sync until #8.
[project.optional-dependencies]
dev = [
    "maturin>=1.8,<2.0",
    "pytest>=8.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "pydantic>=2.0",   # test-only (citry Pydantic Kwargs/Slots)
    "fastapi>=0.110",  # test-only (FastAPI contrib tests, Starlette TestClient)
    "httpx>=0.27",
]
ci = [
    "maturin>=1.8,<2.0",
    "pytest>=8.0",
    "pre-commit>=3.0.0",
    "pydantic>=2.0",
    "fastapi>=0.110",
    "httpx>=0.27",
]
# Benchmark baselines (docs/design/benchmarking.md), pinned exactly (a bump
# re-baselines the published comparison).
benchmark = [
    "django==6.0.6",
    "django-components==0.151.0",
    "jinja2==3.1.6",
]
# Docs-site tooling (docs/design/docs_site.md); nothing imports it until the
# docs-site port.
docs = [
    "pymdown-extensions",   # markdown extensions (highlighting, admonitions, TOC, ...)
    "griffe>=1.15.0",       # Python API-reference generation (the mkdocstrings replacement)
    "lxml",                 # HTML parsing for the post-build guardrails
    "pagefind[bin]",        # static search index; [bin] pulls the bundled Rust binary, no Node
    "minify-html",          # Rust-backed post-build HTML minifier
    "packaging",            # PEP 440 version ordering for the version manifest
    "pygments<2.21",        # 2.20 rejects the None filename pymdownx.highlight passes through
    "pyyaml",               # loads the _nav.yml navigation tree
    "starlette",            # the dev/preview server (a catch-all that renders pages live)
    "uvicorn",              # ASGI server that runs the dev server
]

# Tool configurations (codebase-wide)
[tool.ruff]
line-length = 119
src = ["packages/py"]
exclude = [
    "env",
    ".env",
    ".venv",
    ".tox",
    "build",
    "dist",
    "__pycache__",
    ".mypy_cache",
    # Third-party dependencies (git submodules)
    "third_party",
    # benchmark files, not linted.
    "packages/py/citry/tests/test_benchmark_django*.py",
    "packages/py/citry/tests/test_benchmark_djc*.py",
    "packages/py/citry/tests/test_benchmark_citry.py",
    "packages/py/citry/tests/test_benchmark_citry_const.py",
    "packages/py/citry/tests/test_benchmark_jinja2.py",
]

# See https://docs.astral.sh/ruff/linter/#rule-selection
[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Annotations
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in `*args`
    # Docstring
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D106", # Missing docstring in public nested class
    "D107", # Missing docstring in `__init__`
    "D203", # Incorrect blank line before class
    "D205", # 1 blank line required between summary line and description
    "D212", # Multi-line docstring summary should start at the first line
    "D400", # First line should end with a period
    "D401", # First line of docstring should be in imperative mood
    "D404", # First word of the docstring should not be "This"
    "D412", # No blank lines allowed between a section header and its content ("Examples")
    "D415", # First line should end with a period, question mark, or exclamation point
    # Exceptions
    "EM101", # Exception must not use a string literal, assign to variable first
    "EM102", # Exception must not use an f-string literal, assign to variable first
    # `TODO` comments
    "FIX002", # Line contains TODO, consider resolving the issue
    "TD002",  # Missing author in TODO; try: `# TODO(<author_name>): ...` or `# TODO @<author_name>: ...`
    "TD003",  # Missing issue link for this TODO
    "TD004",  # Missing colon in TODO
    # Code
    "C901",    # Function is too complex
    "COM812",  # missing-trailing-comma (NOTE: Already handled by formatter)
    "ERA001",  # Found commented-out code (NOTE: Too many false positives)
    "INP001",  # File is part of an implicit namespace package. Add an `__init__.py`.
    "PLR0915", # Too many statements
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition
    "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
    "RET504",  # Unnecessary assignment before `return` statement
    "RET505",  # Unnecessary `elif` after `return` statement
    "S308",    # Use of `mark_safe` may expose cross-site scripting vulnerabilities
    "S603",    # `subprocess` call: check for execution of untrusted input
    "SIM108",  # Use ternary operator instead of `if`-`else`-block
    "SIM117",  # Use a single `with` statement with multiple contexts instead of nested `with` statements
    "SLF001",  # Private member accessed
    "TRY300",  # Consider moving this statement to an `else` block
    "TRY301",  # Abstract `raise` to an inner function
    # TODO: Following could be useful to start using, but might require more changes.
    "C420",    # Unnecessary dict comprehension for iterable; use `dict.fromkeys` instead
    "PERF401", # Use `list.extend` to create a transformed list
    "PERF203", # `try`-`except` within a loop incurs performance overhead
    "FBT001",  # Boolean-typed positional argument in function definition
    "FBT002",  # Boolean default positional argument in function definition
    "TRY003",  # Avoid specifying long messages outside the exception class
    # TODO_V1 - Rename error to suffix with `Error` before v1?
    "N818", # Exception name should be named with an Error suffix
    "G004", # Logging statement uses f-string
]

[tool.ruff.lint.per-file-ignores]
"packages/py/**/tests/*" = [
    "ARG002",  # Unused method argument
    "ANN",     # Annotations are not needed for tests
    "N806",    # Variable in function should be lowercase
    "PLC0415", # `import` should be at the top-level of a file
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
    "S101",    # Use of `assert` detected
    "TRY002",  # Create your own exception
]
"packages/py/**/tests/benchmark*" = [
    "T201",    # Benchmark scripts print their results
]
"packages/py/citry/citry/commands/*" = [
    "T201",    # The CLI commands print their output to stdout
    "ARG002",  # A command's handle receives the parsed options but may use none
]
"benchmarks/*" = [
    "T201",    # The comparison runner prints its results
]
"docs_site/cli.py" = [
    "T201",    # the CLI prints its build summary to stdout
]
"docs_site/components/*" = [
    "E501",    # page-chrome templates carry long inline SVG icon and HTML lines
]
"docs_site/examples/*" = [
    "ANN",     # example code is illustrative and shown to readers; keep it minimal
    "ARG002",  # template_data takes slots even when an example does not use them
    "D",       # example modules are demonstrations, not documented APIs
    "INP001",  # examples are imported by file path, not as a package
]
"docs_site/tests/*" = [
    "ANN",     # Annotations are not needed for tests
    "ARG002",  # Unused method argument
    "PLC0415", # In-test imports (e.g. to monkeypatch a module) are fine
    "S101",    # Use of `assert` detected
    "TC003",   # Type-only imports need not move to a TYPE_CHECKING block in tests
]

[tool.ruff.lint.isort]
known-first-party = ["citry", "citry_core"]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["build"]

[[tool.mypy.overrides]]
module = "citry_core.*"
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
