# Root pyproject: monorepo-wide tooling config only (not a releasable package).

[project]
name = "citry-monorepo"
version = "0.0.0"
description = "Monorepo tooling configuration"
requires-python = ">=3.10,<4.0"
dependencies = []
classifiers = [
    "Private :: Do Not Upload", # Explicitly mark as non-releasable
]

# Repo-wide tooling, installed by default on `uv sync`. Package TEST deps
# (pytest, pydantic, fastapi, httpx) deliberately live in each package's own
# [dependency-groups].dev, not here: the uv workspace installs every member's
# group on `uv sync --all-packages`, so each dep has a single declaration and
# there is no cross-file mirroring to keep in step (#8). Benchmark baselines
# live in packages/py/citry's `benchmark` group for the same reason.
[dependency-groups]
dev = [
    "maturin>=1.10.2",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
]

# Optional extras for the docs site (docs/design/docs_site.md): root-only, heavy,
# and not part of the default dev environment. Install with `uv sync --extra docs`
# (add `--extra social-cards` for per-page OG images, which also needs a browser
# binary via `playwright install chromium`).
[project.optional-dependencies]
docs = [
    "pymdown-extensions",   # markdown extensions (highlighting, admonitions, TOC, ...)
    "griffe>=1.15.0",       # Python API-reference generation (the mkdocstrings replacement)
    "lxml",                 # HTML parsing for the post-build guardrails
    "pagefind[bin]",        # static search index; [bin] pulls the bundled Rust binary, no Node
    "minify-html",          # Rust-backed post-build HTML minifier
    "packaging",            # PEP 440 version ordering for the version manifest
    "pygments<2.21",        # 2.20 rejects the None filename pymdownx.highlight passes through
    "pyyaml",               # loads the _nav.yml navigation tree
    "starlette",            # the dev/preview server (a catch-all that renders pages live)
    "uvicorn",              # ASGI server that runs the dev server
]

# Optional: per-page social-card (OG image) generation. Kept out of `docs`
# because Playwright is heavy and also needs a browser binary
# (`playwright install chromium`). The build skips card generation cleanly when
# this is absent, so the `docs` extra alone produces a deployable site.
social-cards = [
    "playwright",           # headless browser that screenshots each OG card to a PNG
]

# uv workspace: packages/py/* are workspace members, so `uv sync --all-packages`
# builds and installs every package from this one root (citry_core through the
# maturin backend, citry editable) and the lockfile covers all of them. This is
# what makes `uv run` safe and lets citry's tests run in CI. See issue #8.
[tool.uv.workspace]
members = ["packages/py/*"]

# Resolve the inter-package dependency (citry needs citry-core) to the local
# workspace member during development, while citry-core>=1.3.0 stays an ordinary
# PyPI range for published builds.
[tool.uv.sources]
citry = { workspace = true }
citry-core = { workspace = true }

# Tool configurations (codebase-wide)
[tool.ruff]
line-length = 119
src = ["packages/py"]
exclude = [
    "env",
    ".env",
    ".venv",
    ".tox",
    "build",
    "dist",
    "__pycache__",
    ".mypy_cache",
    # Third-party dependencies (git submodules)
    "third_party",
    # Vendored third-party code, kept byte-compatible with upstream.
    "docs_site/_vendor",
    # benchmark files, not linted.
    "packages/py/citry/tests/test_benchmark*.py",
    "packages/py/citry_core/tests/benchmark*.py",
    # Agent/editor harness tooling, not shipped code.
    ".claude",
]

# See https://docs.astral.sh/ruff/linter/#rule-selection
[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Annotations
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in `*args`
    # Docstring
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D106", # Missing docstring in public nested class
    "D107", # Missing docstring in `__init__`
    "D203", # Incorrect blank line before class
    "D205", # 1 blank line required between summary line and description
    "D212", # Multi-line docstring summary should start at the first line
    "D400", # First line should end with a period
    "D401", # First line of docstring should be in imperative mood
    "D404", # First word of the docstring should not be "This"
    "D412", # No blank lines allowed between a section header and its content ("Examples")
    "D415", # First line should end with a period, question mark, or exclamation point
    # Exceptions
    "EM101", # Exception must not use a string literal, assign to variable first
    "EM102", # Exception must not use an f-string literal, assign to variable first
    # `TODO` comments
    "FIX002", # Line contains TODO, consider resolving the issue
    "TD002",  # Missing author in TODO; try: `# TODO(<author_name>): ...` or `# TODO @<author_name>: ...`
    "TD003",  # Missing issue link for this TODO
    "TD004",  # Missing colon in TODO
    # Code
    "C901",    # Function is too complex
    "COM812",  # missing-trailing-comma (NOTE: Already handled by formatter)
    "ERA001",  # Found commented-out code (NOTE: Too many false positives)
    "INP001",  # File is part of an implicit namespace package. Add an `__init__.py`.
    "PLR0915", # Too many statements
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition
    "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
    "RET504",  # Unnecessary assignment before `return` statement
    "RET505",  # Unnecessary `elif` after `return` statement
    "S308",    # Use of `mark_safe` may expose cross-site scripting vulnerabilities
    "S603",    # `subprocess` call: check for execution of untrusted input
    "SIM108",  # Use ternary operator instead of `if`-`else`-block
    "SIM117",  # Use a single `with` statement with multiple contexts instead of nested `with` statements
    "SLF001",  # Private member accessed
    "TRY300",  # Consider moving this statement to an `else` block
    "TRY301",  # Abstract `raise` to an inner function
    # TODO: Following could be useful to start using, but might require more changes.
    "C420",    # Unnecessary dict comprehension for iterable; use `dict.fromkeys` instead
    "PERF401", # Use `list.extend` to create a transformed list
    "PERF203", # `try`-`except` within a loop incurs performance overhead
    "FBT001",  # Boolean-typed positional argument in function definition
    "FBT002",  # Boolean default positional argument in function definition
    "TRY003",  # Avoid specifying long messages outside the exception class
    # TODO_V1 - Rename error to suffix with `Error` before v1?
    "N818", # Exception name should be named with an Error suffix
    "G004", # Logging statement uses f-string
]

[tool.ruff.lint.per-file-ignores]
"packages/py/**/tests/*" = [
    "ARG001",  # Unused function argument (mock/callback signatures in tests)
    "ARG002",  # Unused method argument
    "ANN",     # Annotations are not needed for tests
    "N806",    # Variable in function should be lowercase
    "PLC0415", # `import` should be at the top-level of a file
    "PLW1641", # `__eq__` without `__hash__` is fine for throwaway test fixtures
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
    "S101",    # Use of `assert` detected
    "TRY002",  # Create your own exception
]
"packages/py/**/tests/benchmark*" = [
    "T201",    # Benchmark scripts print their results
]
"packages/py/citry/citry/commands/*" = [
    "T201",    # The CLI commands print their output to stdout
    "ARG002",  # A command's handle receives the parsed options but may use none
]
"benchmarks/*" = [
    "T201",    # The comparison runner prints its results
]
"docs_site/cli.py" = [
    "T201",    # the CLI prints its build summary to stdout
]
"docs_site/components/*" = [
    "E501",    # page-chrome templates carry long inline SVG icon and HTML lines
]
"docs_site/examples/*" = [
    "ANN",     # example code is illustrative and shown to readers; keep it minimal
    "ARG002",  # template_data takes slots even when an example does not use them
    "D",       # example modules are demonstrations, not documented APIs
    "INP001",  # examples are imported by file path, not as a package
]
"docs_site/tests/*" = [
    "ANN",     # Annotations are not needed for tests
    "ARG002",  # Unused method argument
    "PLC0415", # In-test imports (e.g. to monkeypatch a module) are fine
    "S101",    # Use of `assert` detected
    "TC003",   # Type-only imports need not move to a TYPE_CHECKING block in tests
]
# The hand-written stub for the Rust extension. Its class and method names mirror
# the PyO3 module and enum-variant names on purpose (the bindings check enforces
# that), and it carries docstrings so editors show help on hover.
"**/*.pyi" = [
    "A002",    # `input` mirrors the published parse_template/compile_template parameter name
    "E501",    # mirrored signatures and docstrings can run long in the stub
    "N801",    # class names mirror Rust submodules/enum variants (html_transform, Node_WithBody)
    "N805",    # namespace classes expose module-level functions, so the first arg is not `self`
    "PYI021",  # docstrings in the stub are intentional (IDE hover help)
    "PYI063",  # positional-only params mirror the PyO3 signatures
]
# The safe-eval sandbox: it executes user expressions and reimplements builtins,
# so several "smells" are the whole point of the file.
"packages/py/citry_core/citry_core/safe_eval/eval.py" = [
    "A001",    # the sandbox intentionally provides builtins named `slice`/`format`
    "PLC0415", # t-string imports are version-gated (string.templatelib is 3.14+), so necessarily lazy
    "PLW2901", # the format() builtin transforms each loop value in place, which reads clearly here
    "PYI063",  # the builtin wrappers use the `__name` positional-only idiom on purpose
    "S102",    # the sandbox executes compiled user code by design
]
# `input` is the published parameter name of parse_template/compile_template;
# renaming it to avoid shadowing the builtin would be an API break.
"packages/py/citry_core/citry_core/template_parser/*" = [
    "A002",    # `input` shadows a builtin but is the public parameter name
]
# The check/validate runners print their report and shell out to cargo/uv.
"scripts/check.py" = [
    "S607",    # `cargo`/`uv` are intentionally resolved from PATH
    "T201",    # the runner prints its results
]
"scripts/validate.py" = [
    "T201",    # the runner prints its results
]

[tool.ruff.lint.isort]
known-first-party = ["citry", "citry_core"]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["build", "docs_site/_vendor"]

[[tool.mypy.overrides]]
module = "citry_core.*"
disallow_untyped_defs = true

[tool.pytest.ini_options]
# Collect only the published packages' suites. Without explicit paths, pytest
# recurses from the repo root and tries to collect the vendored ruff submodule
# (third_party/) and the docs-site tests, which fail to import here. The
# docs-site has its own tests, run separately with its `--extra docs` deps.
testpaths = ["packages/py/citry_core/tests", "packages/py/citry/tests"]

[tool.coverage.run]
# NOTE: The Rust half of citry_core is covered separately by `cargo test`;
#       only its Python wrapper is seen here.
source = ["citry", "citry_core"]
branch = true
omit = [
    "*/tests/*", # the test files themselves are not the measured code
    "*/_rust*",  # the compiled Rust extension and its hand-written type stub
]

[tool.coverage.report]
fail_under = 92 # baseline measured 2026-07-02
show_missing = true
skip_covered = true
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
]
